Summary of important user-visible changes for releases of the control package

===============================================================================
control-2.3.54   Release Date: 2012-xx-yy   Release Manager: Lukas Reichlin
===============================================================================

** Multiplot feature for frequency-domain plotting:
   
     bode       nichols     pzmap
     bodemag    nyquist     sigma

** plot
   A selection of experiments from iddata identification datasets can be
   plotted by  plot (dat, exp)  instead of  plot (dat(:,:,:,exp)).

** sensitivity
   Fixed a problem where an error was raised about an undefined function
   "issiso".

** All SLICOT function names have now leading and trailing underscores to
   emphasize their private nature.


===============================================================================
control-2.3.53   Release Date: 2012-08-27   Release Manager: Lukas Reichlin
===============================================================================

** Added new functions for system identification, including:
   
     arx        iddata       ifft
     moen4      detrend      nkshift
     moesp      fft          plot
     n4sid      filter       resample

** sensitivity
   Added new function to compute and plot the sensitivity margin Ms.

** feedback
   Fixed an argument check which caused false positive error messages.
   It was a copy-paste mistake affecting non-square systems.
   (Thanks to Tony Olivo)


===============================================================================
control-2.3.52   Release Date: 2012-06-25   Release Manager: Lukas Reichlin
===============================================================================

** Fixed a silly mistake in MIMO transfer function to state-space conversion.
   The bug has been introduced with control-2.3.51.
   (Thanks to Jim Rawlings for providing the test case)

** dlqe, lqe
   Added new functions for linear quadratic estimators.