@@ -1,6 +1,6 @@
 Name: Control
-Version: 2.3.53
-Date: 2012-08-27
+Version: 2.3.54
+Date: 2012-09-15
 Author: Lukas Reichlin <lukas.reichlin@gmail.com>
 Maintainer: Lukas Reichlin <lukas.reichlin@gmail.com>
 Title: Control Systems
