@@ -3,7 +3,7 @@
 @setfilename control.info
 @settitle Octave Control Systems Package
 @afourpaper
-@set VERSION 2.3.53
+@set VERSION 2.3.54
 @finalout
 @c @afourwide
 @c %**end of header
